Spacebar to toggle speed

--- a/Doc/Graphics/Figure Scratch Code .ipynb
+++ b/Doc/Graphics/Figure Scratch Code .ipynb
@@ -528,6 +528,48 @@
     {
      "cell_type": "code",
      "collapsed": false,
+     "input": [
+      "render = False"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 286
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "render = render"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 287
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "render"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 288,
+       "text": [
+        "['/bin/sh: 1: render: not found']"
+       ]
+      }
+     ],
+     "prompt_number": 288
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
      "input": [],
      "language": "python",
      "metadata": {},
